# fastapi-db-poc

./: .gitignore  Dockerfile  README.md  build-local-container.sh  docker-compose-build.yml  pyproject.toml  qdrant.Dockerfile
app/: api.py  config.py  crud.py  models.py  utils.py
